[package]
name = "wasm_shader_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
minwebgl = { version = "0.2", default-features = false, features = ['enabled'] }
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
  'WebGl2RenderingContext'
]}
serde = { version = "1.0", default-features = false, features = ["derive"] }


[profile.release]
lto = true
opt-level = 's'  # Often better for size than 'z'
strip = "symbols"
codegen-units = 1
panic = 'abort'